# opencode-loop

./: .gitignore  README.md  pyproject.toml
src/opencode_loop/: __main__.py  cli.py  config.py  help_text.py  json_utils.py  loop_state.py  orchestrator.py  prompts.py  resume.py  runner.py  schemas.py  state.py  templates.py  tui.py
tests/: test_cli.py  test_config.py  test_help_text.py  test_json_utils.py  test_runner.py  test_state.py  test_templates.py  test_tui.py
