[project]
name = "opencode-loop"
version = "0.1.0"
description = "Autonomous eval/execute coding loop orchestrator for OpenCode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "rich>=13.0",
]

[project.scripts]
opencode-loop = "opencode_loop.cli:main"

[project.urls]
Repository = "https://github.com/yourname/opencode-loop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_loop"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]